# duckpg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  extension_config.cmake  go.mod  go.sum  main.go  test.db  vcpkg.json
client/go/: .gitignore  go.mod
client/go/cmd/simple/: main.go
include/duckpg/: duckdb_pgwire_extension.hpp  pg_wire.h  server.h
include/pgwire/: buffer.hpp  exception.hpp  io.hpp  log.hpp  pg_wire.hpp  promise.hpp  protocol.hpp  server.hpp  session.hpp  types.hpp  utils.hpp  writer.hpp
makefiles/: duckdb_extension.Makefile
pg-wire/: Cargo.toml  README.md
pg-wire/src/: connection.rs  engine.rs  protocol_ext.rs
pg-wire/tests/: test_connection.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/convergence_duck/: duckdb.rs
server/src/pgwire_duck/: duckdb.rs  table.rs
src/: main.cpp  main.rs  pg_wire.cpp  server.cpp
src/convergence/: duckdb.rs  mod.rs
src/convergence_duck/: duckdb.rs  mod.rs  table.rs
src/demo/: CMakeLists.txt
src/demo/pgwire/: CMakeLists.txt  main.cpp
src/duckpg/: CMakeLists.txt  duckdb_pgwire_extension.cpp
src/pgwire/: CMakeLists.txt  buffer.cpp  exception.cpp  io.cpp  log.cpp  pg_wire.cpp  protocol.cpp  server.cpp  session.cpp  types.cpp  utils.cpp  writer.cpp
test/cpp/pgwire/: CMakeLists.txt  utils.cpp
test/nodejs/: duckdb_pgwire_test.js
test/python/: duckdb_pgwire_test.py
test/sql/: duckdb_pgwire.test
