[package]
name = "pg-wire"
version = "0.1.0"
authors = ["Candra Kharista <candra.kharista@gmail.com>"]
edition = "2021"
description = "Write servers that speak PostgreSQL's wire protocol"
license = "MIT"
repository = "https://github.com/euiko/duckpg"

[dependencies]
tokio = { version = "1", features = [ "net", "rt-multi-thread", "macros", "io-util", "io-std" ] }
tokio-util = { version = "0.7", features = [ "codec" ] }
thiserror = "1"
bytes = "1"
futures = "0.3"
sqlparser = "0.27"
async-trait = "0.1"
chrono = "0.4"

[dev-dependencies]
tokio-postgres = "0.7"
